# MultiDocRAG

./: .gitignore  .pre-commit-config.yaml  Agentic_Rag.ipynb  Basic_agent.ipynb  README.md  main.py  pyproject.toml
.github/instructions/: python-production.instructions.md
app/config/: settings.py
app/embeddings/: embedder.py
app/ingestion/: __init__.py  base_loader.py  csv_loader.py  docx_loader.py  excel_loader.py  loader_router.py  pdf_loader.py  pdf_pymupdf_loader.py
app/llm/: __init__.py  groq_service.py
app/orchestration/: __init__.py  langgraph_pipeline.py
app/processing/: __init__.py  chunker.py  normalizer.py
app/retrieval/: __init__.py  reranker.py  retriever.py
app/utils/: logger.py
app/vectorstore/: chroma_store.py
langchain_agents/: __init__.py
langchain_agents/agents/: __init__.py  arithmetic_agent.py
langchain_agents/config/: __init__.py  settings.py
langchain_agents/tools/: __init__.py  arithmetic.py
langchain_agents/utils/: __init__.py  logging.py
