[project]
name = "langchain-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-pymupdf4llm>=0.5.0",
    "langchain-text-splitters>=1.1.1",
    "langfuse>=4.2.0",
    "loguru>=0.7.2",
    "marker-pdf>=1.10.2",
]
